--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "canvas",
-    "slug": "canvas",
-    "version": "1.0.0",
+    "name": "monument",
+    "slug": "monument",
+    "version": "0.1.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -18,9 +18,9 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true,
+      "supportsTablet": false,
       "bundleIdentifier": "me.astn.canvas",
-      "buildNumber": "1.0.0"
+      "buildNumber": "0.1.1"
     }
   }
 }
