--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "expo-updates": "~0.4.1"
+    "expo-updates": "~0.4.1",
+    "expo-web-browser": "~8.6.0",
+    "react-native-safe-area-context": "3.1.9"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
