--- a/package.json
+++ b/package.json
@@ -14,18 +14,23 @@
     "@react-navigation/native": "^5.9.3",
     "expo": "^40.0.1",
     "expo-status-bar": "~1.0.3",
+    "expo-updates": "~0.4.1",
+    "expo-web-browser": "~8.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-appearance": "~0.3.3",
+    "react-native-modal": "^11.7.0",
     "react-native-render-html": "^5.1.0",
+    "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "^2.18.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "expo-updates": "~0.4.1",
-    "expo-web-browser": "~8.6.0",
-    "react-native-safe-area-context": "3.1.9"
+    "react-native-reanimated": "~1.13.0",
+    "react-native-gesture-handler": "~1.8.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
