--- a/app.json
+++ b/app.json
@@ -11,6 +11,8 @@
       "backgroundColor": "#f4f4f4"
     },
     "updates": {
+      "checkAutomatically": "ON_LOAD",
+      "fallbackToCacheTimeout": 30000,
       "enabled": true
     },
     "assetBundlePatterns": [
@@ -19,7 +21,7 @@
     "ios": {
       "supportsTablet": false,
       "bundleIdentifier": "me.astn.canvas",
-      "buildNumber": "4"
+      "buildNumber": "6"
     }
   }
 }
