--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
+    "events": "^3.3.0",
     "expo": "^40.0.1",
+    "expo-barcode-scanner": "~9.1.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.1",
     "expo-web-browser": "~8.6.0",
@@ -20,15 +22,14 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-appearance": "~0.3.3",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "~1.13.0",
     "react-native-render-html": "^5.1.0",
     "react-native-screens": "^2.18.0",
     "react-redux": "^7.2.2",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.0.5",
-    "redux-persist": "^6.0.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-gesture-handler": "~1.8.0",
-    "expo-barcode-scanner": "~9.1.0"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
